# rego-cpp

./: .clang-format  .flake8  .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  README.md  SUPPORT.md  binary.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: adversarial-lens.agent.md  conservative-lens.agent.md  editor-lens.agent.md  plan-adversarial.agent.md  plan-conservative.agent.md  plan-security.agent.md  plan-speed.agent.md  plan-usability.agent.md  security-lens.agent.md  speed-lens.agent.md  synthesis-lens.agent.md  usability-lens.agent.md
.github/workflows/: build_nuget.yml  build_wheels.yml  buildtest.yml  opa_version_check.yml  pr_gate.yml
cmake/: regocppConfig.cmake.in  vendor_openssl.cmake
doc/: CMakeLists.txt  Doxyfile.in
docs/: index.html
docs/cpp/: annotated.html  classes.html  classrego_1_1BigInt-members.html  classrego_1_1BigInt.html  classrego_1_1BuiltIns-members.html  classrego_1_1BuiltIns.html  classrego_1_1BuiltInsDef-members.html  classrego_1_1BuiltInsDef.html  classrego_1_1Interpreter-members.html  classrego_1_1Interpreter.html  classrego_1_1Output-members.html  classrego_1_1Output.html  classrego_1_1UnwrapOpt-members.html  classrego_1_1UnwrapOpt.html  classrego_1_1VirtualMachine-members.html  classrego_1_1VirtualMachine.html  deprecated.html  dir_362814eff344aec3384986481aea3ae1.html  dir_362814eff344aec3384986481aea3ae1_dep.map  dir_362814eff344aec3384986481aea3ae1_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  (+58 more)
examples/: README.md
examples/c/: CMakeLists.txt  CMakePresets.json  example.c  main.c
examples/cpp/: CMakeLists.txt  CMakePresets.json  custom_builtin.cc  example.cc
src/: CMakeLists.txt  README.md  add_subtract.cc  args.cc  bigint.cc  builtins.cc  bundle.cc  bundle_binary.cc  bundle_json.cc  comparison.cc  convert_modules.cc  dependency_graph.cc  encoding.cc  file_to_rego.cc  helpers.cc  input_data.cc  internal.cc  internal.h  internal.hh  interpreter.cc  json.cc  lang.cc  lang.h  lists.cc  lookup.cc  lookup.h  main.cc  math.cc  math.h  merge_data.cc  merge_modules.cc  modules.cc  multiply_divide.cc  opblock.cc  output.cc  parse.cc  passes.h  query.cc  reader.cc  rego.cc  (+23 more)
src/builtins/: README.md  aggregates.cc  array.cc  arrays.cc  aws.cc  binary_tree.py  bits.cc  builtins.h  builtins.hh  casts.cc  comparison.cc  conversions.cc  core.cc  crypto.cc  crypto_bcrypt.cc  crypto_core.hh  crypto_mbedtls.cc  crypto_openssl3.cc  crypto_utils.hh  encoding.cc  glob.cc  graph.cc  graphql.cc  http.cc  internal.cc  json.cc  jwt.cc  net.cc  numbers.cc  objects.cc  opa.cc  regex.cc  register.h  rego.cc  semver.cc  sets.cc  strings.cc  time.cc  types.cc  tzdata.h.in  (+5 more)
src/builtins/base64/: base64.cpp  base64.h
src/examples/: bodies.rego  expressions.rego  input.json  input1.json  input2.json  multi.rego  objects.rego  sets.rego
src/passes/: absolute_refs.cc  add_subtract.cc  arithmetic.cc  assign.cc  build_calls.cc  build_refs.cc  comparison.cc  compr.cc  constants.cc  enumerate.cc  expand_imports.cc  functions.cc  if_else.cc  imports.cc  init.cc  input_data.cc  keywords.cc  lift_query.cc  lift_refheads.cc  lift_to_rule.cc  lists.cc  locals.cc  membership.cc  merge_data.cc  merge_modules.cc  modules.cc  multiply_divide.cc  query.cc  refs.cc  replace_argvals.cc  rulebody.cc  rules.cc  simple_refs.cc  skip_refs.cc  skips.cc  strings.cc  structure.cc  symbols.cc  unify.cc
src/unify/: absolute_refs.cc  assign.cc  compr.cc  constants.cc  enumerate.cc  expand_imports.cc  functions.cc  infix.cc  init.cc  lift_query.cc  lift_refheads.cc  lift_to_rule.cc  locals.cc  merge_data.cc  merge_modules.cc  replace_argvals.cc  result.cc  rulebody.cc  simple_refs.cc  skip_refs.cc  skips.cc  strings.cc  symbols.cc  unify.cc  varrefheads.cc
tests/: CMakeLists.txt  README.md  bad.json  bigint.yaml  bugs.yaml  builtins.cc  builtins.yaml  c_api.cc  core.yaml  cpp_api.cc  driver.cc  main.cc  parse.cc  rego_test.cc  rego_test.h  regocpp.yaml  regov1.yaml  test_case.cc  test_case.h
tests/aci/: aci.yaml  api.rego  data.json  framework.rego  input.json
tests/cheriot/: builtins.cpp  cheriot.yaml  compartment.rego  data.json  rtos.rego  sail.json  sail.yaml  test-suite.json
tests/cts/: README.md  cts.yaml  input.json  policy.rego
tests/helpers/: testgen.py
tests/opa/bundles/bodies/: bodies.rego  plan.json
tests/opa/bundles/enumerate/: enumerate.rego  plan.json
tests/opa/bundles/every/: data.json  every.rego  plan.json
tests/opa/bundles/expressions/: expressions.rego  plan.json
tests/opa/bundles/functions/: functions.rego  plan.json
tests/opa/bundles/imports/: plan.json  scalars1.rego  scalars2.rego  scalars3.rego
tests/opa/bundles/keywords/: keywords.rego  plan.json
tests/opa/bundles/maths/: data.json  maths.rego  plan.json
tests/opa/bundles/objects/: data.json  objects.rego  plan.json
tests/opa/bundles/scalars/: plan.json
tests/opa/bundles/setops/: plan.json  setops.rego
tests/opa/bundles/unify/: plan.json  unify.rego
tests/opa/bundles/with/: bodies0.rego  bodies1.rego  data.json  plan.json
tests/vcpkg-consumer/: CMakeLists.txt  test_find_package.cpp
tools/: CMakeLists.txt  driver.cc  fuzzer.cc  main.cc
tools/examples/: compare.rego  compr.rego  data1.json  data2.json  enumerate.rego  errors.rego  every.rego  expressions.rego  functions.rego  import0.rego  import1.rego  import2.rego  input2.json  keywords.rego  refrules.rego  scalars.rego  setops.rego  sets.rego  unify.rego  with.rego
wrappers/python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
wrappers/python/docs/source/: api.rst  conf.py
wrappers/python/src/: _regopy.cc
wrappers/python/src/regopy/: __init__.py  interpreter.py  node.py  output.py  rego_shared.py
wrappers/python/test/: test_input.py  test_interpreter.py  test_node.py
wrappers/rust/regorust/: .gitignore  Cargo.toml  README.md  build.rs  debug.txt
wrappers/rust/regorust/src/: bindings.rs  lib.rs  rego.rs
(+656 files in other folders)
